<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hassan.ta2mk.View.TabHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_tab_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hassan.ta2mk.View.Tab3Account"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_tab3_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hassan.ta2mk.View.Tab2Notification"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_tab2_notification" />
</navigation>