<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Registration"
    android:background="@drawable/back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Bold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/White"
            android:textSize="45sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColorHint="@color/White">


            <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/Name"
                android:inputType="textEmailAddress"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="23sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White">

            <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Phone"
                android:id="@+id/phone"
                android:inputType="phone"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White">

            <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/White"
            android:textColorHint="@color/White">

            <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:inputType="textEmailAddress"
                android:textColor="@color/White"
                android:id="@+id/password"
                android:textSize="23sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.hassan.ta2mk.Presenter.Fonts.Comfortaa_Bold
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/shop_item"
            android:gravity="center"
            android:onClick="Register"
            android:text="@string/Register"
            android:textColor="@color/White"
            android:textSize="25sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>