<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/btn_background"
            android:padding="10dp">




            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Shops"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:textColor="@color/Offblack"
                    android:layout_marginRight="5dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:textColor="@color/Offblack"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="end"
                    android:textColor="@color/Offblack"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"

                    />

            </LinearLayout>

</LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>