<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.StartHome"
    android:background="@color/Offwhite">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="58dp"
           android:background="@color/Green"
           android:gravity="center"
           android:orientation="horizontal">


           <ImageView
               android:id="@+id/addUser"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end|center_vertical"
               android:layout_weight="1"
               android:src="@drawable/ic_person_add_black_24dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/home"
               android:textColor="@color/White"
               android:textSize="30sp"
               android:textStyle="bold"

               />

           <ImageView
               android:id="@+id/search"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="end|center_vertical"
               android:layout_weight="1"
               android:src="@drawable/ic_search_black_24dp" />

       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/All_Categories"
           android:textSize="30sp"
           android:textStyle="bold"
           android:gravity="center"
           android:textColor="@color/Offblack"
           android:layout_marginTop="5dp"
           />

       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="135dp"
           android:id="@+id/categories_recycler"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Shops"
           android:textSize="30sp"
           android:textStyle="bold"
           android:gravity="center"
           android:textColor="@color/Offblack"
           android:layout_marginTop="10dp"
           />
       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/shops_recycler"/>


   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>